--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
         <div id="pantalla">
             <label>50</label>
         </div>
+        <div id="controles">
+            <button class="numbers">7</button>
+            <button class="numbers">8</button>
+            <button class="numbers">9</button>
+            <button class="numbers">C</button>
+            <button class="numbers">4</button>
+            <button class="numbers">5</button>
+            <button class="numbers">6</button>
+            <button class="numbers">+</button>
+            <button class="numbers">1</button>
+            <button class="numbers">2</button>
+            <button class="numbers">3</button>
+            <button class="numbers">-</button>
+            <button class="numbers" id="zero">0</button>
+            <button class="numbers">*</button>
+            <button class="numbers">.</button>
+            <button class="numbers">=</button>
+            <button class="numbers">÷</button>
+
+
+        </div>
     </div>
 </body>
 </html>
