Completado de estructura; números en pantalla y clear.

--- a/index.html
+++ b/index.html
@@ -10,30 +10,27 @@
 </head>
 <body>
     <h1>Calculadora</h1>
-    <div id="base-calculadora">
-        <div id="pantalla">
-            <label>50</label>
+    <div class="base-calculadora">
+        <div class="pantalla">
+            <label>0</label>
         </div>
-        <div id="controles">
-            <button class="numbers">7</button>
-            <button class="numbers">8</button>
-            <button class="numbers">9</button>
-            <button class="numbers">C</button>
-            <button class="numbers">4</button>
-            <button class="numbers">5</button>
-            <button class="numbers">6</button>
-            <button class="numbers">+</button>
-            <button class="numbers">1</button>
-            <button class="numbers">2</button>
-            <button class="numbers">3</button>
-            <button class="numbers">-</button>
-            <button class="numbers" id="zero">0</button>
-            <button class="numbers">*</button>
-            <button class="numbers">.</button>
-            <button class="numbers">=</button>
-            <button class="numbers">÷</button>
-
-
+        <div class="controles">
+            <button class="row01" id="clear">C</button>
+            <button class="row02 numbers">7</button>
+            <button class="row02 numbers">8</button>
+            <button class="row02 numbers">9</button>
+            <button class="row03 numbers">4</button>
+            <button class="row03 numbers">5</button>
+            <button class="row03 numbers">6</button>
+            <button class="row04 numbers">1</button>
+            <button class="row04 numbers">2</button>
+            <button class="row04 numbers">3</button>
+            <button class="row05 numbers">0</button>
+            <button class="operations">+</button>
+            <button class="operations">-</button>
+            <button class="operations">x</button>
+            <button class="operations">÷</button>
+            <button class="operations">.</button>
         </div>
     </div>
 </body>
