--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <label>0</label>
         </div>
         <div class="controles">
-            <button class="row01" id="clear">C</button>
+            <button class="row01">C</button>
             <button class="row02 numbers">7</button>
             <button class="row02 numbers">8</button>
             <button class="row02 numbers">9</button>
@@ -30,7 +30,7 @@
             <button class="operations">-</button>
             <button class="operations">x</button>
             <button class="operations">÷</button>
-            <button class="operations">.</button>
+            <button id="igual">=</button>
         </div>
     </div>
 </body>
